# Well-Formed-Formula-Analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
include/: wffanalyzer.h
src/: main.cpp  wffanalyzer.cpp
tests/: CMakeLists.txt  dotest.sh  wffanalyzertest.cpp
